# nuqulib

./: .buildinfo  .gitignore  LICENSE  README.md  README.md~  api_ref.html  contributing.html  count_commuting.py  genindex.html  index.html  nuqulib.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorial_NuQuLib.ipynb
.doctrees/: api_ref.doctree  contributing.doctree  environment.pickle  index.doctree  nuqulib.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/nuqulib/: angular_momentum_projection.html  ansatz.html  circuits.html  diagonalization.html  encoding.html  hatt_mapper.html  majoranaop.html  mode_based_mapper.html  myutils.html  nft_opt_method.html  nuclear_hamiltonian.html  pairing_hamiltonian.html  pairwise.html  postselection.html  quantum_algorithms.html  read_me3jgz.html  shellmodel_hamiltonian.html  vqe_example_pennylane.html
_sources/: contributing.rst.txt  index.rst.txt  nuqulib.rst.txt
docs/source/: api_ref.rst  conf.py  contributing.rst  index.rst  modules.rst  nuqulib.rst
examples/: commutation_utils.py  count_commuting.py  tutorial_NuQuLib.ipynb
examples/scripts/: generate_Hamiltonian.py
examples/tutorials/: tutorial_NuQuLib.ipynb
misc/: commutation_utils.py  count_commuting.py  counting_Hamiltonian_terms.jl  julia_groupling.jl
src/nuqulib/: __init__.py  angular_momentum_projection.py  ansatz.py  circuits.py  diagonalization.py  encoding.py  hatt_mapper.py  majoranaop.py  mode_based_mapper.py  myutils.py  nft_opt_method.py  nuclear_hamiltonian.py  operators.py  pairing_hamiltonian.py  pairwise.py  postselection.py  quantum_algorithms.py  read_me3jgz.py  shellmodel_hamiltonian.py  vqe_example_pennylane.py
tests/: TEST_OPTIMIZATION_README.md  optimize_times_phases.ipynb  test_GivensRotations.py  test_J0projection.py  test_ODMD.py  test_hatt_mapper.py  test_integ_encoding_NCSM_SM.py  test_measurements_Pauli.py  test_nucl_qe_integ.py  test_pairingHamiltonian.py  test_read_3NF_me3j.py  test_resource_estimation.py  test_single_spieces.py  test_technical_integration.py  test_total_angular_momentum.py  test_utils.py  test_vqe_pennylane_pshell.py  test_zero_seniority_valenceCI.py  verify_optimization.py
