[project]
name = "nuqulib"
version = "0.1.0"
description = "Nuclear Quantum computing Library"
authors = [
    { name="Sota Yoshida", email="syoshida@a.utsunomiya-u.ac.jp" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "appdirs (==1.4.4)",
    "appnope (==0.1.4)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "astunparse (==1.6.3)",
    "async-lru (==2.0.4)",
    "attrs (==24.3.0)",
    "autograd (==1.7.0)",
    "autoray (==0.7.0)",
    "babel (==2.16.0)",
    "beautifulsoup4 (==4.12.3)",
    "bleach (==6.2.0)",
    "cachetools (==5.5.0)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cirq-core (==1.4.1)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "cryptography (==44.0.0)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.12)",
    "decorator (==5.1.1)",
    "defusedxml (==0.7.1)",
    "deprecation (==2.1.0)",
    "diastatic-malt (==2.15.2)",
    "dill (==0.3.9)",
    "duet (==0.2.9)",
    "et-xmlfile (==2.0.0)",
    "executing (==2.1.0)",
    "fastjsonschema (==2.21.1)",
    "fonttools (==4.55.3)",
    "fqdn (==1.5.1)",
    "gast (==0.6.0)",
    "graphviz (==0.20.3)",
    "h11 (==0.14.0)",
    "h5py (==3.12.1)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "hugr (==0.12.2)",
    "ibm-cloud-sdk-core (==3.22.1)",
    "ibm-platform-services (==0.59.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "ipykernel (==6.29.5)",
    "ipython (==8.31.0)",
    "ipywidgets (==8.1.5)",
    "isoduration (==20.11.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.5)",
    "json5 (==0.10.0)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "jupyter (==1.1.1)",
    "jupyter-console (==6.6.3)",
    "jupyter-events (==0.11.0)",
    "jupyter-lsp (==2.2.5)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "jupyter-server (==2.15.0)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.3.4)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "jupyterlab-widgets (==3.0.13)",
    "kiwisolver (==1.4.8)",
    "lark (==1.2.2)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.0)",
    "matplotlib-inline (==0.1.7)",
    "mdurl (==0.1.2)",
    "mistune (==3.1.0)",
    "mpmath (==1.3.0)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.5)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.4.2)",
    "notebook (==7.3.2)",
    "notebook-shim (==0.2.4)",
    "numpy (==1.26.4)",
    "openfermion (==1.6.1)",
    "openpyxl (==3.1.5)",
    "orjson (==3.10.18)",
    "outcome (==1.3.0.post0)",
    "overrides (==7.7.0)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.4)",
    "pbr (==6.1.0)",
    "pennylane (==0.40.0)",
    "pennylane-lightning (==0.40.0)",
    "pexpect (==4.9.0)",
    "pillow (==11.1.0)",
    "platformdirs (==4.3.6)",
    "pluggy (==1.6.0)",
    "prettytable (==3.16.0)",
    "projectq (==0.8.0)",
    "prometheus-client (==0.21.1)",
    "prompt-toolkit (==3.0.50)",
    "psutil (==6.1.1)",
    "ptyprocess (==0.7.0)",
    "pubchempy (==1.0.4)",
    "pure-eval (==0.2.3)",
    "pycparser (==2.22)",
    "pydantic (==2.9.2)",
    "pydantic-extra-types (==2.10.5)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.23.4)",
    "pygments (==2.19.1)",
    "pyjwt (==2.10.1)",
    "pylatexenc (==2.10)",
    "pyparsing (==3.2.1)",
    "pyscf (==2.9.0)",
    "pysocks (==1.7.1)",
    "pyspnego (==0.11.2)",
    "pytest (==8.4.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "python-json-logger (==3.2.1)",
    "pytket (==2.6.0)",
    "pytket-offline-display (==0.0.9)",
    "pytket-projectq (==0.37.0)",
    "pytket-qiskit (==0.62.0)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.2)",
    "pyzmq (==26.2.0)",
    "pyzstd (==0.17.0)",
    "qiskit (==1.3.2)",
    "qiskit-aer (==0.16.0)",
    "qiskit-algorithms (==0.3.1)",
    "qiskit-ibm-runtime (==0.34.0)",
    "qiskit-nature (==0.7.2)",
    "qiskit-utils (==1.2.1)",
    "qnexus (==0.20.0)",
    "quantinuum-schemas (==3.2.6)",
    "qwasm (==1.0.1)",
    "referencing (==0.36.1)",
    "requests (==2.32.3)",
    "requests-ntlm (==1.3.0)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rich (==13.9.4)",
    "rpds-py (==0.22.3)",
    "rustworkx (==0.15.1)",
    "scipy (==1.15.1)",
    "scipy-openblas32 (==0.3.28.0.2)",
    "seaborn (==0.13.2)",
    "selenium (==4.30.0)",
    "semver (==3.0.4)",
    "send2trash (==1.8.3)",
    "setuptools (==75.8.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.6)",
    "stack-data (==0.6.3)",
    "stevedore (==5.4.0)",
    "symengine (==0.13.0)",
    "sympy (==1.13.3)",
    "termcolor (==2.5.0)",
    "terminado (==0.18.1)",
    "tinycss2 (==1.4.0)",
    "tomlkit (==0.13.2)",
    "tornado (==6.4.2)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trio (==0.29.0)",
    "trio-websocket (==0.12.2)",
    "types-python-dateutil (==2.9.0.20241206)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2024.2)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.3.0)",
    "wcwidth (==0.2.13)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "websockets (==13.1)",
    "wheel (==0.45.1)",
    "widgetsnbextension (==4.0.13)",
    "wsproto (==1.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]