[tool.poetry]
name = "nuqulib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
numpy = "1.26.4"
annotated-types = "^0.7.0"
anyio = "^4.12.1"
appdirs = "^1.4.4"
appnope = "^0.1.4"
asttokens = "^3.0.1"
astunparse = "^1.6.3"
attrs = "^25.4.0"
autograd = "^1.8.0"
autoray = "0.8.2"
build = "^1.4.0"
cachecontrol = "^0.14.4"
cachetools = "^7.0.0"
certifi = "^2026.1.4"
cffi = "^2.0.0"
charset-normalizer = "^3.4.4"
cleo = "^2.1.0"
comm = "^0.2.3"
contourpy = "^1.3.3"
crashtest = "^0.4.1"
cryptography = "^46.0.4"
cycler = "^0.12.1"
debugpy = "^1.8.20"
decorator = "^5.2.1"
deprecation = "^2.1.0"
diastatic-malt = "^2.15.2"
dill = "^0.4.1"
distlib = "^0.4.0"
duet = "^0.2.9"
dulwich = "^1.0.0"
executing = "^2.2.1"
fastjsonschema = "^2.21.2"
filelock = "^3.20.3"
findpython = "^0.7.1"
fonttools = "^4.61.1"
gast = "^0.7.0"
graphviz = "^0.21"
h11 = "^0.16.0"
h5py = "^3.15.1"
httpcore = "^1.0.9"
httpx = "^0.28.1"
ibm-cloud-sdk-core = "^3.24.4"
ibm-platform-services = "^0.73.2"
idna = "^3.11"
installer = "^0.7.0"
ipykernel = "^7.2.0"
ipython = "^9.10.0"
ipython-pygments-lexers = "^1.1.1"
jaraco-classes = "^3.4.0"
jaraco-context = "^6.1.0"
jaraco-functools = "^4.4.0"
jedi = "^0.19.2"
jinja2 = "^3.1.6"
jupyter-client = "^8.8.0"
jupyter-core = "^5.9.1"
keyring = "^25.7.0"
kiwisolver = "^1.4.9"
lark = "^1.3.1"
markupsafe = "^3.0.3"
matplotlib = "^3.10.8"
matplotlib-inline = "^0.2.1"
more-itertools = "^10.8.0"
mpmath = "^1.3.0"
msgpack = "^1.1.2"
nest-asyncio = "^1.6.0"
networkx = "^3.6.1"
openfermion = "^1.7.1"
packaging = "^26.0"
pandas = "^3.0.0"
parso = "^0.8.5"
pbs-installer = "^2026.2.3"
pexpect = "^4.9.0"
pillow = "^12.1.0"
pkginfo = "^1.12.1.2"
platformdirs = "^4.5.1"
prompt-toolkit = "^3.0.52"
psutil = "^7.2.2"
ptyprocess = "^0.7.0"
pubchempy = "^1.0.5"
pure-eval = "^0.2.3"
pycparser = "^3.0"
pydantic = "^2.12.5"
pydantic-core = "^2.41.5"
pygments = "^2.19.2"
pyjwt = "^2.11.0"
pylatexenc = "^2.10"
pyparsing = "^3.3.2"
pyproject-hooks = "^1.2.0"
pyspnego = "^0.12.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
pyzmq = "^27.1.0"
qiskit = "^2.3.0"
qiskit-aer = "^0.17.2"
qiskit-algorithms = "^0.4.0"
qiskit-ibm-runtime = "^0.45.0"
qiskit-nature = "^0.7.2"
qwasm = "^1.0.1"
rapidfuzz = "^3.14.3"
requests = "^2.32.5"
requests-toolbelt = "^1.0.0"
requests-ntlm = "^1.3.0"
rustworkx = "^0.17.1"
scipy = "^1.17.0"
scipy-openblas32 = "^0.3.31.22.1"
seaborn = "^0.13.2"
setuptools = "^82.0.0"
shellingham = "^1.5.4"
six = "^1.17.0"
sortedcontainers = "^2.4.0"
stack-data = "^0.6.3"
stevedore = "^5.6.0"
symengine = "^0.14.1"
sympy = "^1.14.0"
termcolor = "^3.3.0"
tomlkit = "^0.14.0"
tornado = "^6.5.4"
tqdm = "^4.67.3"
traitlets = "^5.14.3"
trove-classifiers = "^2026.1.14.14"
typing-inspection = "^0.4.2"
typing-extensions = "^4.15.0"
tzdata = "^2025.3"
urllib3 = "^2.6.3"
virtualenv = "^20.36.1"
wcwidth = "^0.6.0"
wheel = "^0.46.3"
xattr = "^1.3.0"
zstandard = "^0.25.0"
pennylane = "^0.44.0"
pytket = "^2.12.0"
pytket-quantinuum = "^0.57.0"
pytket-qiskit = "^0.77.0"
sphinx = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
