[project]
name = "nuqulib"
version = "0.1.0"
description = ""
authors = [{ name = "SotaYoshida", email = "syoshida@a.utsunomiya-u.ac.jp" }]
requires-python = ">=3.12,<4,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==1.26.4",
    "annotated-types>=0.7.0,<0.8",
    "anyio>=4.12.1,<5",
    "appdirs>=1.4.4,<2",
    "appnope>=0.1.4,<0.2",
    "asttokens>=3.0.1,<4",
    "astunparse>=1.6.3,<2",
    "attrs>=25.4.0,<26",
    "autograd>=1.8.0,<2",
    "autoray==0.8.2",
    "build>=1.4.0,<2",
    "cachecontrol>=0.14.4,<0.15",
    "cachetools>=7.0.0,<8",
    "certifi>=2026.1.4,<2027",
    "cffi>=2.0.0,<3",
    "charset-normalizer>=3.4.4,<4",
    "cleo>=2.1.0,<3",
    "comm>=0.2.3,<0.3",
    "contourpy>=1.3.3,<2",
    "crashtest>=0.4.1,<0.5",
    "cryptography>=46.0.4,<47",
    "cycler>=0.12.1,<0.13",
    "debugpy>=1.8.20,<2",
    "decorator>=5.2.1,<6",
    "deprecation>=2.1.0,<3",
    "diastatic-malt>=2.15.2,<3",
    "dill>=0.4.1,<0.5",
    "distlib>=0.4.0,<0.5",
    "duet>=0.2.9,<0.3",
    "dulwich>=1.0.0,<2",
    "executing>=2.2.1,<3",
    "fastjsonschema>=2.21.2,<3",
    "filelock>=3.20.3,<4",
    "findpython>=0.7.1,<0.8",
    "fonttools>=4.61.1,<5",
    "gast>=0.7.0,<0.8",
    "graphviz>=0.21,<0.22",
    "h11>=0.16.0,<0.17",
    "h5py>=3.15.1,<4",
    "httpcore>=1.0.9,<2",
    "httpx>=0.28.1,<0.29",
    "ibm-cloud-sdk-core>=3.24.4,<4",
    "ibm-platform-services>=0.73.2,<0.74",
    "idna>=3.11,<4",
    "installer>=0.7.0,<0.8",
    "ipykernel>=7.2.0,<8",
    "ipython>=9.10.0,<10",
    "ipython-pygments-lexers>=1.1.1,<2",
    "jaraco-classes>=3.4.0,<4",
    "jaraco-context>=6.1.0,<7",
    "jaraco-functools>=4.4.0,<5",
    "jedi>=0.19.2,<0.20",
    "jinja2>=3.1.6,<4",
    "jupyter-client>=8.8.0,<9",
    "jupyter-core>=5.9.1,<6",
    "keyring>=25.7.0,<26",
    "kiwisolver>=1.4.9,<2",
    "lark>=1.3.1,<2",
    "markupsafe>=3.0.3,<4",
    "matplotlib>=3.10.8,<4",
    "matplotlib-inline>=0.2.1,<0.3",
    "more-itertools>=10.8.0,<11",
    "mpmath>=1.3.0,<2",
    "msgpack>=1.1.2,<2",
    "nest-asyncio>=1.6.0,<2",
    "networkx>=3.6.1,<4",
    "openfermion>=1.7.1,<2",
    "packaging>=26.0,<27",
    "pandas>=3.0.0,<4",
    "parso>=0.8.5,<0.9",
    "pbs-installer>=2026.2.3,<2027",
    "pexpect>=4.9.0,<5",
    "pillow>=12.1.0,<13",
    "pkginfo>=1.12.1.2,<2",
    "platformdirs>=4.5.1,<5",
    "prompt-toolkit>=3.0.52,<4",
    "psutil>=7.2.2,<8",
    "ptyprocess>=0.7.0,<0.8",
    "pubchempy>=1.0.5,<2",
    "pure-eval>=0.2.3,<0.3",
    "pycparser>=3.0,<4",
    "pydantic>=2.12.5,<3",
    "pydantic-core>=2.41.5,<3",
    "pygments>=2.19.2,<3",
    "pyjwt>=2.11.0,<3",
    "pylatexenc>=2.10,<3",
    "pyparsing>=3.3.2,<4",
    "pyproject-hooks>=1.2.0,<2",
    "pyspnego>=0.12.0,<0.13",
    "python-dateutil>=2.9.0.post0,<3",
    "pytz>=2025.2,<2026",
    "pyzmq>=27.1.0,<28",
    "qiskit>=2.3.0,<3",
    "qiskit-aer>=0.17.2,<0.18",
    "qiskit-algorithms>=0.4.0,<0.5",
    "qiskit-ibm-runtime>=0.45.0,<0.46",
    "qiskit-nature>=0.7.2,<0.8",
    "qwasm>=1.0.1,<2",
    "rapidfuzz>=3.14.3,<4",
    "requests>=2.32.5,<3",
    "requests-toolbelt>=1.0.0,<2",
    "requests-ntlm>=1.3.0,<2",
    "rustworkx>=0.17.1,<0.18",
    "scipy>=1.17.0,<2",
    "scipy-openblas32>=0.3.31.22.1,<0.4",
    "seaborn>=0.13.2,<0.14",
    "setuptools>=82.0.0,<83",
    "shellingham>=1.5.4,<2",
    "six>=1.17.0,<2",
    "sortedcontainers>=2.4.0,<3",
    "stack-data>=0.6.3,<0.7",
    "stevedore>=5.6.0,<6",
    "symengine>=0.14.1,<0.15",
    "sympy>=1.14.0,<2",
    "termcolor>=3.3.0,<4",
    "tomlkit>=0.14.0,<0.15",
    "tornado>=6.5.4,<7",
    "tqdm>=4.67.3,<5",
    "traitlets>=5.14.3,<6",
    "trove-classifiers>=2026.1.14.14,<2027",
    "typing-inspection>=0.4.2,<0.5",
    "typing-extensions>=4.15.0,<5",
    "tzdata>=2025.3,<2026",
    "urllib3>=2.6.3,<3",
    "virtualenv>=20.36.1,<21",
    "wcwidth>=0.6.0,<0.7",
    "wheel>=0.46.3,<0.47",
    "xattr>=1.3.0,<2",
    "zstandard>=0.25.0,<0.26",
    "pennylane>=0.44.0,<0.45",
    "pytket>=2.12.0,<3",
    "pytket-quantinuum>=0.57.0,<0.58",
    "pytket-qiskit>=0.77.0,<0.78",
    "pennylane-qiskit>=0.44.1",
    "numba>=0.65.0",
]

[dependency-groups]
docs = [
    "sphinx>=9.1.0,<10",
    "furo>=2025.7.19,<2026",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
